--- a/index.html
+++ b/index.html
@@ -94,33 +94,112 @@
 	</div>
 	<div id="testimonials">
 	  <div class="container-fluid">
-
 	  <h3 id="subtitle" class="text-center"> Testimonials </h3>    
        <section class="row">
-        <div class="col-sm-12 col-md-6 col-lg-4">
+
+        <div class="float-left col-xs-12 col-sm-6 col-md-6 col-lg-4">
 	  	  <section id="outside" class="text-center">
 	  	      <img src="./assets/test1.jpg" class="test">
 	  	      <h3 class="test-name"> Shannon Thouvenin</h3>
 	  	      <hr><br>
-	  	      <div class="info">"Stacy, is by far one of the most creative and talented individuals I have ever met. There is no limit to her creativeness and her ideas are so unique, you will not see anything else like hers. Her ability to use lighting surpasses many, and she is great at being resourceful on the spot with new innovative ideas. Along side of photography she is fabulous at doing hair and make-up as well. Additionally, she creates some of the most beautiful dresses I have ever seen, each one of them unique and fit to suit each model perfectly. If being unbelievably talented isn't enough, she is one of the most inspiring people I know. She has the kindest heart and has touched many people's hearts in turn. I know she inspires me every day to be a better person and model!"</div>
+            <input type="checkbox" class="read-more-state" id="post-1" />
+	  	      <p class="text-justify info read-more-wrap">"Stacy, is by far one of the most creative and talented individuals I have ever met. There is no limit to her creativeness and her ideas are so unique, you will not see anything else like hers. Photography is the biggest passion in her life and she give her all when she is on the set and behind the computer editing. Her ability to use lighting surpasses many, and she is great at being resourceful on the spot with new innovative ideas. Along side of photography she is a master at doing hair and make-up too. Additionally, she creates some of the most beautiful dresses I have ever seen, each one of them unique and fit to suit each model perfectly. If being unbelievably talented isn't enough, she is one of the most inspiring people I know. <span class="read-more-target">She has the kindest heart and has touched many people's hearts in turn. I know she inspires me every day to be a better person and model!"</span></p>
+               <label for="post-1" class="read-more-trigger"></label>
 	  	  </section>
-      </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">        
+      </div> 
+
+        <div class="float-left col-xs-12 col-sm-6 col-md-6 col-lg-4">
         <section id="outside" class="text-center">
             <img src="./assets/nicole.jpg" class="test">
             <h3 class="test-name"> Nicole Spain </h3>
             <hr><br>
-            <div class="info"> There is so much I could say about this woman and no words could describe how phenomenal she is. As a person and a professional she is truly beautiful, inspiring, honest, helpful and an all around blast to be around! I can say without a doubt my experiences with her have aided me in my modeling journey so much. She allowed me to see something within myself that I could not and filled me with such hope. This is someone that will not just make you feel special for one day but can impact you for the rest of your life. The memories and experiences are something I will personally always cherish every time. This spunky woman is so incredibly talented and creative. She makes jaw dropping dresses and headpieces unlike anything I have seen. She has the best ability at using what she has in multiple settings and still making you and your experience feel like one in a million. If I could create images that define the word passion, it would be in all of Stacys photographs. I just love this woman and everything she represents. I never thought fairytales could exist until I saw this woman's masterpieces. </div>
+            <input type="checkbox" class="read-more-state" id="post-2" />
+            <p class="text-justify info read-more-wrap">"There is so much I could say about this woman and no words could describe how phenomenal she is. As a person and a professional she is truly beautiful, inspiring, honest, helpful and an all around blast to be around! I can say without a doubt my experiences with her have aided me in my modeling journey so much. She allowed me to see something within myself that I could not and filled me with such hope. This is someone that will not just make you feel special for one day but can impact you for the rest of your life. The memories and experiences are something I will personally always cherish every time. This spunky woman is so incredibly talented and creative. She makes jaw dropping dresses and headpieces unlike anything I have seen.
+             <span class="read-more-target">She has the best ability at using what she has in multiple settings and still making you and your experience feel like one in a million. If I could create images that define the word passion, it would be in all of Stacys photographs. I just love this woman and everything she represents. I never thought fairytales could exist until I saw this woman's masterpieces." </span></p>
+              <label for="post-2" class="read-more-trigger"></label>
         </section>
       </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+      <div class="clearfix visible-sm-block visible-md-block"></div>
+      <div class="float-left col-xs-12 col-sm-6 col-md-6 col-lg-4">
 	  	  <section id="outside" class="text-center">
 	  	      <img src="./assets/brian.jpg" class="test">
             <h3 class="test-name"> Brian Parker </h3>
             <hr><br>
-            <div class="info">"I have modeled for a long time, and I have shot with photographers all over the nation and abroad. I have never shot with a photographer who puts in more effort than Stacy Mcquerrey. I saw Stacy's work about a year ago, and I had been trying to set up a shoot with her for a while. We finally scheduled a shoot together a few months ago. She didn't have much experience shooting male models. However, her inexperience shooting male models did not show during our shoot. Stacy formulated the ideas and even guided me on how to pose. I really felt like an amateur shooting with her because I did not do any of the work. Stacy had planned the whole shoot originally outside, but due to weather conditions we had to wing the shoot in an indoor location. This did not stop Stacy from perfecting an idea. We probably shot for 1-2 hours and her photoset was some of the best photos I have in my portfolio. One of her photos is even my avatar to my Facebook page. The reason Stacy is great behind the camera is her experience and creativity. She has been shooting models for many years and her work shows it. She is a professional no doubt about it. Stacy will put in the work with her desire to create the best photo that other photographers will take for granted. Stacy is just an amazing person to be around. I am a professional underwear and travel model, and I regularly get paid for my time during shoots. However, my skill level is in no way close to Stacy's professionalism. She is one of the only photographers I would pay for a shoot, and I am really looking forward to collaborating on more art with Stacy in the future."</div>
+             <input type="checkbox" class="read-more-state" id="post-3" />
+            <p class="text-justify info read-more-wrap">"I have modeled for a long time, and I have shot with photographers all over the nation and abroad. I have never shot with a photographer who puts in more effort than Stacy Mcquerrey. I saw Stacy's work about a year ago, and I had been trying to set up a shoot with her for a while. We finally scheduled a shoot together a few months ago. She didn't have much experience shooting male models. However, her inexperience shooting male models did not show during our shoot. Stacy formulated the ideas and even guided me on how to pose. I really felt like an amateur shooting with her because I did not do any of the work. Stacy had planned the whole shoot originally outside, but due to weather conditions we had to wing the shoot in an indoor location. <span class="read-more-target">This did not stop Stacy from perfecting an idea. We probably shot for 1-2 hours and her photoset was some of the best photos I have in my portfolio. One of her photos is even my avatar to my Facebook page. The reason Stacy is great behind the camera is her experience and creativity. She has been shooting models for many years and her work shows it. She is a professional no doubt about it. Stacy will put in the work with her desire to create the best photo that other photographers will take for granted. Stacy is just an amazing person to be around. I am a professional underwear and travel model, and I regularly get paid for my time during shoots. However, my skill level is in no way close to Stacy's professionalism. She is one of the only photographers I would pay for a shoot, and I am really looking forward to collaborating on more art with Stacy in the future."</span></p>
+            <label for="post-3" class="read-more-trigger"></label>
 	  	  </section>
      </div>
+     <div class="clearfix visible-lg-block"></div>
+
+      <div class="float-left col-xs-12 col-sm-6 col-md-6 col-lg-4">
+        <section id="outside" class="text-center">
+            <img src="./assets/mandi2.jpg" class="test">
+            <h3 class="test-name"> Mandi Doll</h3>
+            <hr><br>
+            <input type="checkbox" class="read-more-state" id="post-4" />
+            <p class="text-justify info read-more-wrap">"Echo park copper mug meh plaid tumeric chicharrones narwhal taiyaki dreamcatcher yuccie aesthetic marfa hashtag biodiesel. Blog thundercats prism tacos tattooed. Vinyl drinking vinegar schlitz gentrify viral tousled organic tattooed live-edge fanny pack actually. Vexillologist post-ironic tumblr, seitan narwhal selfies umami asymmetrical. Deep v poutine celiac pabst readymade umami, DIY stumptown. Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine. <span class="read-more-target">Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine."</span></p>
+               <label for="post-4" class="read-more-trigger"></label>
+        </section>
+      </div> 
+      <div class="clearfix visible-sm-block visible-md-block"></div>
+      <div class="float-left col-xs-12 col-sm-6 col-md-6 col-lg-4">
+        <section id="outside" class="text-center">
+            <img src="./assets/Tonya.jpg" class="test">
+            <h3 class="test-name"> Tonya Kincaid </h3>
+            <hr><br>
+            <input type="checkbox" class="read-more-state" id="post-5" />
+            <p class="text-justify info read-more-wrap">"Echo park copper mug meh plaid tumeric chicharrones narwhal taiyaki dreamcatcher yuccie aesthetic marfa hashtag biodiesel. Blog thundercats prism tacos tattooed. Vinyl drinking vinegar schlitz gentrify viral tousled organic tattooed live-edge fanny pack actually. Vexillologist post-ironic tumblr, seitan narwhal selfies umami asymmetrical. Deep v poutine celiac pabst readymade umami, DIY stumptown. Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine.
+             <span class="read-more-target">Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine." </span></p>
+              <label for="post-5" class="read-more-trigger"></label>
+        </section>
+      </div>
+      <div class=" float-left col-xs-12 col-sm-6 col-md-6 col-lg-4">
+        <section id="outside" class="text-center">
+            <img src="./assets/Emily.jpg" class="test">
+            <h3 class="test-name"> Emily Grace </h3>
+            <hr><br>
+             <input type="checkbox" class="read-more-state" id="post-6" />
+            <p class="text-justify info read-more-wrap">"Echo park copper mug meh plaid tumeric chicharrones narwhal taiyaki dreamcatcher yuccie aesthetic marfa hashtag biodiesel. Blog thundercats prism tacos tattooed. Vinyl drinking vinegar schlitz gentrify viral tousled organic tattooed live-edge fanny pack actually. Vexillologist post-ironic tumblr, seitan narwhal selfies umami asymmetrical. Deep v poutine celiac pabst readymade umami, DIY stumptown. Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine.<span class="read-more-target">Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine."</span></p>
+            <label for="post-6" class="read-more-trigger"></label>
+        </section>
+     </div>
+     <div class="clearfix  visible-sm-block visible-md-block visible-lg-block"></div>
+
+     <div class="float-left col-xs-12 col-sm-6 col-md-6 col-lg-4">
+        <section id="outside" class="text-center">
+            <img src="./assets/Luna.jpg" class="test">
+            <h3 class="test-name"> Luna Eclipse</h3>
+            <hr><br>
+            <input type="checkbox" class="read-more-state" id="post-7" />
+            <p class="text-justify info read-more-wrap">"Echo park copper mug meh plaid tumeric chicharrones narwhal taiyaki dreamcatcher yuccie aesthetic marfa hashtag biodiesel. Blog thundercats prism tacos tattooed. Vinyl drinking vinegar schlitz gentrify viral tousled organic tattooed live-edge fanny pack actually. Vexillologist post-ironic tumblr, seitan narwhal selfies umami asymmetrical. Deep v poutine celiac pabst readymade umami, DIY stumptown. Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine.<span class="read-more-target">Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine."</span></p>
+               <label for="post-7" class="read-more-trigger"></label>
+        </section>
+      </div> 
+      <div class="float-left col-xs-12 col-sm-6 col-md-6 col-lg-4">
+        <section id="outside" class="text-center">
+            <img src="./assets/Ariana.jpg" class="test">
+            <h3 class="test-name"> Ariana </h3>
+            <hr><br>
+            <input type="checkbox" class="read-more-state" id="post-8" />
+            <p class="text-justify info read-more-wrap">"Echo park copper mug meh plaid tumeric chicharrones narwhal taiyaki dreamcatcher yuccie aesthetic marfa hashtag biodiesel. Blog thundercats prism tacos tattooed. Vinyl drinking vinegar schlitz gentrify viral tousled organic tattooed live-edge fanny pack actually. Vexillologist post-ironic tumblr, seitan narwhal selfies umami asymmetrical. Deep v poutine celiac pabst readymade umami, DIY stumptown. Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine.
+             <span class="read-more-target">Helvetica church-key roof party adaptogen. Tilde freegan lyft seitan poutine hashtag, venmo fashion axe live-edge snackwave farm-to-table banjo irony normcore. Yr vegan palo santo tumblr YOLO hell of. 3 wolf moon succulents sustainable, meditation small batch microdosing poutine." </span></p>
+              <label for="post-8" class="read-more-trigger"></label>
+        </section>
+      </div>
+      <div class="clearfix visible-sm-block visible-md-block"></div>
+      <div class="float-left col-xs-12 col-sm-6 col-md-6 col-lg-4">
+        <section id="outside" class="text-center">
+            <img src="./assets/Kaitlyn.jpg" class="test">
+            <h3 class="test-name"> Lucy La-Croix </h3>
+            <hr><br>
+             <input type="checkbox" class="read-more-state" id="post-9" />
+            <p class="text-justify info read-more-wrap">"Cray lomo XOXO, kitsch chambray enamel pin try-hard iceland freegan mustache hot chicken. Next level slow-carb jean shorts +1 hell of hot chicken flannel, scenester vexillologist banh mi pickled direct trade. Mixtape venmo tattooed bitters intelligentsia. Edison bulb live-edge pitchfork, typewriter direct trade salvia +1 taiyaki before they sold out cliche pinterest food truck humblebrag organic meh. Narwhal tousled paleo waistcoat fingerstache farm-to-table taiyaki mixtape four loko woke portland.<span class="read-more-target">8-bit subway tile prism marfa. Ramps taiyaki cred pop-up, live-edge pickled franzen chartreuse farm-to-table biodiesel literally. Single-origin coffee woke locavore four loko keffiyeh cred. Single-origin coffee la croix lumbersexual street art next level copper mug echo park artisan microdosing."</span></p>
+            <label for="post-9" class="read-more-trigger"></label>
+        </section>
+     </div>
+     <div class="clearfix visible-lg-block"></div>
+
 	  </section>
 	</div>
 </div>
@@ -160,6 +239,6 @@
 	    <script src="./js/jquery.min.js"></script>
 	    <script src="./js/bootstrap.min.js"></script>
 	    <script src="./js/jquery.easing.min.js"></script>
-<!-- 	    <script src="./js/script.js"></script> -->
+	    <script src="./js/script.js"></script>
   </body>
 </html>
