jQuery issues with popup

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 
   </head>
   <body>
+<!--     <div class="pop-outer">
+      <div class="pop-inner">
+        <button class="close">X</button>
+        <h2>Currently no bookings available</h2>
+        <p>I am unable to shoot right now, as I am saving up money to repair or replace my broken camera.</p>
+      </div>
+    </div> -->
     <nav id="topNav" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
